# SigmoidZ

./: .gitignore  README.md  pyproject.toml
configs/: 50m_sigmoidz.json  50m_sigmoidz_research.json
docs/: theory.md
scripts/: smoke_train.sh  torchrun_50m.sh  train_50m.sh  train_50m_wandb.sh
src/: config.py  data.py  eval.py  model.py  modules.py  train.py  utils.py
tests/: test_model.py  test_modules.py  test_train_smoke.py
