[project]
name = "sigmoidz"
version = "0.1.0"
description = "SigmoidZ experiments for MFVI-inspired Transformer normalization and updates."
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.20",
    "safetensors>=0.4",
    "torch>=2.4",
    "tqdm>=4.66",
    "transformers>=4.44",
]

[project.optional-dependencies]
tracking = [
    "wandb>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
